subindo novos metodos do funcionario