@@ -3,13 +3,14 @@ package com.example.safestock.adapter.outbound.repository;
 import com.example.safestock.adapter.outbound.error.NotFoundException;
 import com.example.safestock.adapter.outbound.mapper.FuncionarioMapper;
 import com.example.safestock.application.port.out.FuncionarioRepository;
+import com.example.safestock.domain.enuns.CargoFuncionario;
 import com.example.safestock.domain.model.Funcionario;
+import com.example.safestock.infrastructure.entity.FuncionarioEntity;
 import com.example.safestock.infrastructure.jpa.JpaFuncionarioRepository;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 
 @Repository
@@ -29,10 +30,11 @@ public class FuncionarioRepositoryImpl implements FuncionarioRepository {
 //    }
 
     @Override
-    public List<Funcionario> buscarFuncionario() {
-        return jpa.findAll().stream()
+    public List<Funcionario> buscarPorEmailDiferenteECargoDiferente(String email, CargoFuncionario cargo) {
+        List<FuncionarioEntity> entities = jpa.findByEmailNotAndCargoNot(email, cargo);
+        return entities.stream()
                 .map(FuncionarioMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
